--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="mock-rescan">↺</div>
           </div>
-          <div class="mock-site">exampleshop.com</div>
+          <div class="mock-site">dogtreats.com</div>
           <div class="mock-body">
             <div class="mock-section">
               <div class="mock-section-header">
