--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="feature-card">
           <div class="feature-icon">⚡</div>
           <h3>Instant, everywhere</h3>
-          <p>Works on thousands of UK and international retailers — Shopify, custom sites, and more.</p>
+          <p>Works on every ecommerce webiste, including Shopify, Wordpress, custom sites, and more.</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">🔒</div>
