--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="hero-inner">
       <div class="hero-text">
         <div class="hero-badge">Free Chrome Extension</div>
-        <h1 class="hero-heading">Know the shipping<br>before you buy.</h1>
+        <h1 class="hero-heading">Know the shipping<br>before you buy</h1>
         <p class="hero-sub">Fetch instantly shows you delivery costs, free shipping thresholds and returns policies on any online shop — without leaving the page.</p>
         <div class="hero-actions">
           <a href="https://chrome.google.com/webstore" id="install" class="btn-primary">
@@ -180,7 +180,7 @@
   <section class="cta-section">
     <div class="container cta-inner">
       <img src="icon128.png" alt="Fetch" class="cta-mascot">
-      <h2>Start shopping smarter.</h2>
+      <h2>Start shopping smarter</h2>
       <p>Free forever. No account. One click to install.</p>
       <a href="https://chrome.google.com/webstore" class="btn-primary btn-large">
         Add Fetch to Chrome — it's free
