--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fetch – Instant Shipping Info for Any Shop</title>
-  <meta name="description" content="Fetch is a free Chrome extension that instantly shows you shipping costs, free delivery thresholds and returns policies on any online shop.">
-  <meta property="og:title" content="Fetch – Instant Shipping Info for Any Shop">
-  <meta property="og:description" content="Know before you buy. Fetch shows shipping costs, free delivery thresholds and returns at a glance.">
+  <title>Fetch – Instant Delivery Info for Any Shop</title>
+  <meta name="description" content="Fetch is a free Chrome extension that instantly shows you delivery costs, free delivery thresholds, couriers, and returns policies on any online shop.">
+  <meta property="og:title" content="Fetch – Instant Delivery Info for Any Shop">
+  <meta property="og:description" content="Know before you buy. Fetch shows delivery costs, couriers, free delivery thresholds and returns at a glance.">
   <meta property="og:image" content="og-image.png">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="icon128.png">
@@ -33,8 +33,8 @@
     <div class="hero-inner">
       <div class="hero-text">
         <div class="hero-badge">Free Chrome Extension</div>
-        <h1 class="hero-heading">Know the shipping<br>before you buy</h1>
-        <p class="hero-sub">Fetch instantly shows you delivery costs, free shipping thresholds and returns policies on any online shop — without leaving the page.</p>
+        <h1 class="hero-heading">Know the delivery<br>before you buy</h1>
+        <p class="hero-sub">Fetch instantly shows you delivery costs, free delivery thresholds and returns policies on any online shop — without leaving the page.</p>
         <div class="hero-actions">
           <a href="https://chrome.google.com/webstore" id="install" class="btn-primary">
             <svg viewBox="0 0 24 24" fill="none" class="btn-icon">
@@ -84,7 +84,7 @@
             <div class="mock-section">
               <div class="mock-section-header">
                 <span class="mock-section-icon">🎁</span>
-                <span class="mock-section-title">FREE SHIPPING</span>
+                <span class="mock-section-title">FREE DELIVERY</span>
                 <span class="mock-dot blue"></span>
               </div>
               <div class="mock-threshold">Free over £60.00</div>
@@ -125,13 +125,13 @@
         <div class="step">
           <div class="step-num">2</div>
           <h3>Click Fetch</h3>
-          <p>Click the Fetch icon in your toolbar. In seconds it sniffs out the shipping policy so you don't have to.</p>
+          <p>Click the Fetch icon in your toolbar. In seconds it sniffs out the delivery policy so you don't have to.</p>
         </div>
         <div class="step-arrow">→</div>
         <div class="step">
           <div class="step-num">3</div>
           <h3>Know before you buy</h3>
-          <p>See delivery options, free shipping thresholds and the returns window — all in one glance.</p>
+          <p>See delivery options, free delivery thresholds and the returns window — all in one glance.</p>
         </div>
       </div>
     </div>
@@ -145,11 +145,11 @@
         <div class="feature-card">
           <div class="feature-icon">🚚</div>
           <h3>Delivery options</h3>
-          <p>See every shipping tier — Standard, Express, Next Day — with times and costs, instantly.</p>
+          <p>See every delivery tier — Standard, Express, Next Day — with times and costs, instantly.</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">🎁</div>
-          <h3>Free shipping threshold</h3>
+          <h3>Free delivery threshold</h3>
           <p>Know exactly how much you need to spend to unlock free delivery. No more hunting for the banner.</p>
         </div>
         <div class="feature-card">
