--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="hero-heading">Know the delivery<br>before you buy</h1>
         <p class="hero-sub">Fetch instantly shows you delivery costs, free delivery thresholds and returns policies on any online shop — without leaving the page.</p>
         <div class="hero-actions">
-          <a href="https://www.gofetch.delivery/" id="install" class="btn-primary">
+          <a href="https://chromewebstore.google.com/detail/fetch-%E2%80%93-instant-shipping/jaoeogpphcdclkifeknclfoihjhhogfm?authuser=2&hl=en" id="install" class="btn-primary">
             <svg viewBox="0 0 24 24" fill="none" class="btn-icon">
               <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z" fill="currentColor" opacity=".2"/>
               <path d="M12 8v4l3 3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -182,7 +182,7 @@
       <img src="icon128.png" alt="Fetch" class="cta-mascot">
       <h2>Start shopping smarter</h2>
       <p>Free forever. No account. One click to install.</p>
-      <a href="https://www.gofetch.delivery/" class="btn-primary btn-large">
+      <a href="https://chromewebstore.google.com/detail/fetch-%E2%80%93-instant-shipping/jaoeogpphcdclkifeknclfoihjhhogfm?authuser=2&hl=en" class="btn-primary btn-large">
         Add Fetch to Chrome — it's free
       </a>
     </div>
