--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <img src="icon128.png" alt="Fetch" class="nav-logo">
         <span class="nav-name">Fetch</span>
       </div>
-      <a href="#install" class="nav-cta">Add to Chrome — it's free</a>
+      <a href="https://chromewebstore.google.com/detail/fetch-%E2%80%93-instant-shipping/jaoeogpphcdclkifeknclfoihjhhogfm?authuser=2&hl=en" class="nav-cta" target="_blank" rel="noopener noreferrer">
+  Add to Chrome — it's free
+</a>
     </div>
   </nav>
 
